--- a/src/CSP2.Desktop/Views/Pages/SettingsPage.xaml
+++ b/src/CSP2.Desktop/Views/Pages/SettingsPage.xaml
@@ -225,7 +225,8 @@
                                     Height="48"
                                     CornerRadius="12"
                                     Margin="0,0,16,0">
-                                <TextBlock Text="⚙️" 
+                                <TextBlock Text="{StaticResource SettingsIcon}" 
+                                           FontFamily="{StaticResource FontAwesomeSolid}"
                                            FontSize="24"
                                            HorizontalAlignment="Center"
                                            VerticalAlignment="Center"/>
